; ModuleID = '/home/carl/AnghaBench/kphp-kdb/antispam/extr_antispam-engine.c_memcache_delete.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/antispam/extr_antispam-engine.c_memcache_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connection = type { i32 }

@INIT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"pattern\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"%d%n\00", align 1
@.str.2 = private unnamed_addr constant [10 x i8] c"DELETED\0D\0A\00", align 1
@del_pattern = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [12 x i8] c"NOT_FOUND\0D\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @memcache_delete(%struct.connection* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.connection*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.connection* %0, %struct.connection** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = load i32, i32* @INIT, align 4
  store i32 7, i32* %8, align 4
  %12 = load i32, i32* %7, align 4
  %13 = icmp sge i32 %12, 7
  br i1 %13, label %14, label %43

14:                                               ; preds = %3
  %15 = load i8*, i8** %6, align 8
  %16 = call i32 @strncmp(i8* %15, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 7)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %43, label %18

18:                                               ; preds = %14
  store i32 0, i32* %9, align 4
  store i32 0, i32* %10, align 4
  %19 = load i8*, i8** %6, align 8
  %20 = getelementptr inbounds i8, i8* %19, i64 7
  %21 = call i32 @sscanf(i8* %20, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i32* %9, i32* %10)
  %22 = icmp sge i32 %21, 1
  br i1 %22, label %23, label %42

23:                                               ; preds = %18
  %24 = load i8*, i8** %6, align 8
  %25 = load i32, i32* %10, align 4
  %26 = add nsw i32 7, %25
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds i8, i8* %24, i64 %27
  %29 = load i8, i8* %28, align 1
  %30 = icmp ne i8 %29, 0
  br i1 %30, label %42, label %31

31:                                               ; preds = %23
  %32 = load i32, i32* %9, align 4
  %33 = call i64 @do_del_pattern(i32 %32)
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %41

35:                                               ; preds = %31
  %36 = load %struct.connection*, %struct.connection** %5, align 8
  %37 = getelementptr inbounds %struct.connection, %struct.connection* %36, i32 0, i32 0
  %38 = call i32 @write_out(i32* %37, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0), i32 9)
  %39 = load i32, i32* @del_pattern, align 4
  %40 = call i32 @RETURN(i32 %39, i32 0)
  br label %41

41:                                               ; preds = %35, %31
  br label %42

42:                                               ; preds = %41, %23, %18
  br label %43

43:                                               ; preds = %42, %14, %3
  %44 = load %struct.connection*, %struct.connection** %5, align 8
  %45 = getelementptr inbounds %struct.connection, %struct.connection* %44, i32 0, i32 0
  %46 = call i32 @write_out(i32* %45, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.3, i64 0, i64 0), i32 11)
  %47 = load i32, i32* @del_pattern, align 4
  %48 = call i32 @RETURN(i32 %47, i32 0)
  %49 = load i32, i32* %4, align 4
  ret i32 %49
}

declare dso_local i32 @strncmp(i8*, i8*, i32) #1

declare dso_local i32 @sscanf(i8*, i8*, i32*, i32*) #1

declare dso_local i64 @do_del_pattern(i32) #1

declare dso_local i32 @write_out(i32*, i8*, i32) #1

declare dso_local i32 @RETURN(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
